--- a/filemother.tex
+++ b/filemother.tex
@@ -131,7 +131,7 @@
 % \input{chapitre2.tex}
 % \input{chapitre4.tex}
 %\input{conclusion.tex}
-%\input{annexes.tex}
+\input{annexes.tex}
 %*********************** Bibliographie ************ 
 \bibliographystyle{alpha}
 \bibliography{biblio}  
