--- a/chap1.tex
+++ b/chap1.tex
@@ -16,7 +16,8 @@
 			 			
 		\end{center} 		 
 		
-		La matrice de commandabilité est triangulaire supérieure ce qui fait que son rang vaut 3 car il n'éxiste aucune relation linéaire entre ses colonnes ou entre ses lignes.\\
+		La matrice de commandabilité est triangulaire supérieure ce qui fait que son rang vaut 3 car il n'éxiste aucune relation linéaire entre ses colonnes ou entre ses lignes,\label{Co} \hyperref[Annexe A]{voir Annexe A.}\\
+		
 		\textbf{Conclusion:} Le modèle linéarisé est bien commandable vu que le rang de la matrice $Co$ est égale au nombre de valeurs propres que possède la matrice dynamique $A$. 
 		
 		\section{\textsc {La loi de commande par retour d'état}} 
@@ -27,10 +28,21 @@
 		\label{fig1}
 		\end{center}
 		
+		\paragraph{} Les matrices du système en boucle fermée deviennent:\\
+		
+		\begin{center}
+			
+			$A_{BF}=A-BK$\\
+			 $B_{BF}=B$\\
+			 $C_{BF}=C$\\
+			 $D_{BF}=D=0$			
+			
+		\end{center}				
+		
 		\paragraph{}
 			Afin de calculer les paramètres du retour d'état soit le gain matriciel $K$ et le pré-compensateur $N$ nous devons choisir des valeurs pour les pôles désirés $P_{des}=\begin{pmatrix} P_1 & P_2 & P_3 \end{pmatrix} $ qui respectent les spécificités du cahier des charges.\\
 		
-		\paragraph{} Du cours de SLI2 on trouve que le temps de réponse $t_r =\frac{3}{|Re(vp)|} $ avec $vp$ : valeur propre et vu qu'une spécificité dit que $t_r \leqslant 90s$ alors on trouve:\\
+		\paragraph{} Du cours de SLI2 le temps de réponse $t_r =\frac{3}{|Re(vp)|} $, $vp$ : valeur propre. Vu qu'une spécificité dit que $t_r \leqslant 90s$ alors on trouve:\\
 		
 		\begin{center}
 				
@@ -39,4 +51,23 @@
 				$\Rightarrow Re(vp) \geqslant 0.033 \wedge Re(vp) \leqslant -0.033$
 		\end{center}
 		Si $\Rightarrow Re(vp) \geqslant 0.033$ alors notre système est instable, donc la plus lente valeur propre autrement appelée mode dominant doit être inférieur ou égal à $-0.033$.\\\\
-		Nous choisissons alors les valeurs désirés suivantes $P_{des}=\begin{bmatrix} -0.033&-0.15&-0.12 \end{bmatrix} $
+		
+		Nous choisissons alors les valeurs désirés suivantes: $P_{des}= \begin{bmatrix} P_1&P_2&P_3\end{bmatrix}=\begin{bmatrix} -0.033&-0.15&-0.12 \end{bmatrix} $. Afin de calculer le gain matriciel $K=\begin{bmatrix} K_1 & K_2 & K_3 \end{bmatrix}$ il faut impérativement que le polynôme caractéristique:$ \Psi(A-BK)= \Psi(P_{des})$, autrement dit: $det(A-BK)=(P-P_1)(P-P_2)(P-P_3)$, on trouve:\\
+		
+		\begin{center}
+					
+			$\Psi(A-BK)$=\\$\Psi(A_{BF})$=$\begin{vmatrix}
+			-0.009202-64.93506K_1&0.009202-64.93506K_2&-64.93506K_3\\
+			0.009202&-0.019831&0.010629\\
+			 0.000000&0.010629&-0.048646
+			\end{vmatrix}$\\[1.5cm]
+			
+			$\Psi(P_{des})=(P+0.033)(P+0.15)(P+0.12)$			
+			
+		\end{center}
+		
+		\paragraph{} Par identification on trouve que $K=\begin{bmatrix} 0.0035&0.0170&-0.0141\end{bmatrix}$ la valeur du gain matriciel du retour d'état,\label{K} \hyperref[Annexe B]{voir Annexe B.}\\
+		
+		\paragraph{} On sait que: $N=\frac{1}{C(-A+BK)^{-1}B+D}$ on obtient au final: $N=0.0108$,\label{N} \hyperref[Annexe C]{Voir Annexe C.}
+		
+		
