--- a/filemother.tex
+++ b/filemother.tex
@@ -128,7 +128,7 @@
 
  %\input{intro.tex}
 \input{chap1.tex}
-% \input{chapitre2.tex}
+\input{chap2.tex}
 % \input{chapitre4.tex}
 %\input{conclusion.tex}
 \input{annexes.tex}
