--- a/filemother.tex
+++ b/filemother.tex
@@ -126,15 +126,14 @@
 %*********************** listes des tableaux **************
 %\listoftables
 
- %\input{intro.tex}
+ \input{intro.tex}
 \input{chap1.tex}
 \input{chap2.tex}
-% \input{chapitre4.tex}
-%\input{conclusion.tex}
+\input{conclusion.tex}
 \input{annexes.tex}
 %*********************** Bibliographie ************ 
-\bibliographystyle{alpha}
-\bibliography{biblio}  
+%\bibliographystyle{alpha}
+%\bibliography{biblio}  
 
 
 
